# workshop-bootstrap

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  SDD.md  SRS.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  test.yml
data/: README.md
demo-site/: app.py  requirements.txt
linux/: README.md  bootstrap  dev
mac/: README.md  bootstrap  dev
repos/cyvl-geoguesser/: repo.json
repos/cyvl-geoguesser-complete/code/: .env.local  README.md  SDD.md  package-lock.json
repos/cyvl-geoguesser-complete/code/api/: README.md
repos/cyvl-geoguesser-complete/code/src/: App.tsx  index.css
repos/cyvl-geoguesser-complete/code/taskfiles/: sops.yaml
repos/cyvl-geoguesser-workshop/code/api/: pyproject.toml
repos/cyvl-geoguesser-workshop/code/api/apps/geolocation-api/: README.md
repos/cyvl-geoguesser-workshop/code/taskfiles/: env.yaml
repos/cyvl-geoguesser/code/: SDD.md  SRS.md
repos/cyvl-geoguesser/scripts/: start.sh
repos/demo-site/: repo.json
repos/demo-site/code/templates/: index.html
repos/demo-site/scripts/: start.sh
repos/workshop-cyvl-geoguesser/code/: Taskfile.yaml  index.html  package.json
repos/workshop-cyvl-geoguesser/code/api/apps/geolocation-api/: pyproject.toml
repos/workshop-cyvl-geoguesser/code/api/apps/geolocation-api/src/geolocation_api/: routes.py
repos/workshop-cyvl-geoguesser/code/taskfiles/: python-checks.yaml
scripts/: bootstrap-common.sh  dev-common.sh  install-cursor-linux.sh  install-cursor-macos.sh  install-cursor-windows.ps1  install-docker-linux.sh  install-docker-macos.sh  install-docker-windows.ps1  start-repo.sh  utils.ps1  utils.sh
windows/: README.md  bootstrap.ps1  dev.ps1
(+34 files in other folders)
