[project]
authors = [
    { name = "PJ Mara", email = "pj@cyvl.ai" },
]
description = "API for the geolocation application"
name = "geolocation-api"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "round-generator>=0.1.0",
    "state-management>=0.1.0",
    "scoring>=0.1.0",
]

[tool.uv.sources]
round-generator   = { workspace = true }
state-management  = { workspace = true }
scoring           = { workspace = true }

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.8.3,<0.9.0"]
